--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mwangi-max/github.io/vidio",
+  "homepage":"http://mwangi-max/github.io/final-vidio",
   "name": "solid",
   "private": true,
   "version": "0.0.0",
